--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
   <header><h1>CSS Transform and Animations!</h1></header>
   <section>
     <h3>Rotate</h3>
-    <div id="rotate"></div>
+    <div class="box" id="rotate"></div>
     <h3>Skew</h3>
-    <div id="skew"></div>
+    <div class="box" id="skew"></div>
     <h3>ALL THE TINGS!!</h3>
-    <div id="all"></div>
+    <div class="box" id="all"></div>
   </section>
   <section>
     <h3>Keyframe animation</h3>
@@ -24,8 +24,19 @@
 
   <section>
     <!-- Stretch goal: add extra animations here -->
+    <h3>MOVEBRAH</h3>
+    <div id="leftToRight" class="box">MOVE BRAH</div>
+    <h3>SPINCYCLE</h3>
+    <div id="add" class="box" onclick="add()"></div>
+    <h3></h3>
+    <div class="box"></div>
+    <h3></h3>
+    <div class="box"></div>
+    <h3></h3>
+    <div class="box"></div>
   </section>
 
 <!-- Stretch goal: add your js file here -->
+<script type="text/javascript" src="./js/app.js"></script>></script>
 </body>
 </html>
